# shopify-recent-collections

./: facebook_invite_likers.py  package-lock.json  package.json  recent-collections.liquid  update-category.js  update-origin-hs.js
fms-email-campaign-system/: .env.example  .gitignore  README.md  pyproject.toml
fms-email-campaign-system/config/: fms.toml
fms-email-campaign-system/docs/: BUILD_SPEC.md
fms-email-campaign-system/src/fms_campaigns/: audit.py  cli.py  config.py  content.py  db.py  http_client.py  models.py  ocr.py  omnisend.py  schedule.py  services.py  shopify.py
fms-email-campaign-system/src/fms_campaigns/commands/: audit.py  brand.py  build.py  ingest.py  match.py  schedule.py  status.py
fms-email-campaign-system/tests/: conftest.py  test_audit.py  test_config.py  test_content.py  test_http_client.py  test_ocr.py  test_schedule.py
fms-email-campaign-system/tests/fixtures/golden/: day_sample.json
